Update Integration Test